argocd/applications/prod-blue/dareyscore/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dareyscore-api
  namespace: dareyscore
spec:
  replicas: 5
  selector:
    matchLabels:
      app: dareyscore-api
  template:
    metadata:
      labels:
        app: dareyscore-api
      annotations:
        argocd-image-updater.argoproj.io/image-list: api=586794457112.dkr.ecr.eu-west-2.amazonaws.com/dareyscore/dareyscore-api
        argocd-image-updater.argoproj.io/write-back-method: git
        argocd-image-updater.argoproj.io/git-branch: main
        argocd-image-updater.argoproj.io/match-tag: "^[0-9a-f]{40}$"
        argocd-image-updater.argoproj.io/update-strategy: latest
    spec:
      serviceAccountName: dareyscore-sa
      containers:
        - name: api
          image: 586794457112.dkr.ecr.eu-west-2.amazonaws.com/dareyscore/dareyscore-api:679032211891009cd3968ddb70ff9516e93ac892
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9090
              name: metrics
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 8
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
