argocd/applications/prod-blue/dareyscore/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dareyscore-worker
  namespace: dareyscore
spec:
  replicas: 5
  selector:
    matchLabels:
      app: dareyscore-worker
  template:
    metadata:
      labels:
        app: dareyscore-worker
      annotations:
        argocd-image-updater.argoproj.io/image-list: worker=586794457112.dkr.ecr.eu-west-2.amazonaws.com/dareyscore/dareyscore-worker
        argocd-image-updater.argoproj.io/write-back-method: git
        argocd-image-updater.argoproj.io/git-branch: main
        argocd-image-updater.argoproj.io/match-tag: "^[0-9a-f]{40}$"
        argocd-image-updater.argoproj.io/update-strategy: latest
    spec:
      serviceAccountName: dareyscore-sa
      containers:
        - name: worker
          image: 586794457112.dkr.ecr.eu-west-2.amazonaws.com/dareyscore/dareyscore-worker:40a6b83f662dbc60acdef9ce50f5475d0237ef78
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
